Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/static/Static02.out
Static02.java:17:15: compiler.err.illegal.static.intf.meth.call: Static02.I
1 error
